--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -1,6 +1,6 @@
 <nav class="flex items-center justify-between flex-wrap bg-blue-400 p-6 px-10">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <span class="font-semibold text-xl tracking-tight text-white">Banking System</span>
+        <span class="font-semibold text-xl tracking-tight text-white">Banking System Management</span>
     </div>
     <div class="block lg:hidden">
         <button class="flex items-center px-3 py-2 border rounded text-white border-white-400 hover:text-white hover:border-white">
@@ -19,6 +19,8 @@
                 <a href="{% url 'transactions:withdraw_money' %}" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
                     Withdraw
                 </a>
+                
+
             </div>
             <div class="flex w-auto">
                 <div class="text-blue-900 my-auto font-black px-5">Welcome, {{ request.user.first_name }} {{ request.user.last_name }}!</div>
