Just addess two more menues Transfer and Exchange

--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -20,7 +20,13 @@
                     Withdraw
                 </a>
                 
-
+                <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
+                    Transfer
+                </a>
+                <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
+                    Exchange
+                </a>
+                
             </div>
             <div class="flex w-auto">
                 <div class="text-blue-900 my-auto font-black px-5">Welcome, {{ request.user.first_name }} {{ request.user.last_name }}!</div>
