--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -1,6 +1,6 @@
 <nav class="flex items-center justify-between flex-wrap bg-blue-400 p-6 px-10">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
-        <span class="font-semibold text-xl tracking-tight text-white">Banking System</span>
+        <span class="font-semibold text-xl tracking-tight text-white">Banking System Management</span>
     </div>
     <div class="block lg:hidden">
         <button class="flex items-center px-3 py-2 border rounded text-white border-white-400 hover:text-white hover:border-white">
@@ -8,6 +8,16 @@
         </button>
     </div>
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto px-10">
+        <div class="text-md lg:flex-grow">
+            <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
+                Home
+            </a>
+            <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
+                About Us
+            </a>
+            
+        </div>
+
         {% if request.user.is_authenticated %}
             <div class="text-md lg:flex-grow">
                 <a href="{% url 'transactions:transaction_report' %}" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
@@ -19,6 +29,7 @@
                 <a href="{% url 'transactions:withdraw_money' %}" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
                     Withdraw
                 </a>
+
             </div>
             <div class="flex w-auto">
                 <div class="text-blue-900 my-auto font-black px-5">Welcome, {{ request.user.first_name }} {{ request.user.last_name }}!</div>
@@ -76,20 +87,8 @@
 </style>
 </head>
 <body>
+<body>
 
-
-<div class="dropdown">
-  <button class="inline-block font-medium text-sm px-4 py-2 leading-none bg-blue-900 rounded text-white border-white hover:border-transparent hover:text-gray-800 hover:bg-white mt-4 lg:mt-0 margin-left: 4px;">
-    Branches </button>
-  <div class="dropdown-content">
-            <a href="https://en.wikipedia.org/wiki/Malappuram">Malappuram</a>
-            <a href="https://en.wikipedia.org/wiki/Palakkad">Palakkad</a>
-            <a href="https://en.wikipedia.org/wiki/Ernakulam">Eranamkulam</a>
-            <a href="https://en.wikipedia.org/wiki/Thrissur">Thrissure</a>
-            <a href="https://en.wikipedia.org/wiki/Calicut_(kingdom)">Calicut</a>
-  </div>
-  
-</div>
 
 </body>
 </html>
