--- a/templates/core/footer.html
+++ b/templates/core/footer.html
@@ -2,9 +2,10 @@
     <div class="container mx-auto px-6">
         <div class="mt-5 flex flex-col items-center">
             <div class="sm:w-2/3 text-center py-0 pb-2">
-                <p class="text-md text-white font-bold mb-2">
-                    © <b>2023 </b> ___Developed by Huzaifa-Royesh-Sakina using django framework___
-                </p>
+                <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                    © 2023 Copyright:
+                    <a class="text-white" href="#">Banking-system-management.com</a>
+                  </div>
             </div>
         </div>
     </div>
