--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -23,7 +23,7 @@
                 <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
                     Transfer
                 </a>
-                <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
+                <a href=" {% url 'exchange' %}  " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
                     Exchange
                 </a>
                 
