font color changed

--- a/templates/exchange/exchange.html
+++ b/templates/exchange/exchange.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %} {% load static %} {% block head_title %}Banking System{% endblock %} {% block content %}
 
 
-   <h2 style="font-size: 34px;margin-left: 10cm"> Please Choose Your Facorite Currency </h2>
+   <h2 style="font-size: 34px;margin-left: 10cm;color: lightblue;"> Please Choose Your Facorite Currency </h2>
     <div class="container">
     <div class="page-header" id="banner">
       <div class="row">
