static file changed

--- a/templates/exchange/exchange.html
+++ b/templates/exchange/exchange.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %} {% load static %} {% block head_title %}Banking System{% endblock %} {% block content %}
-<link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" />
+<link rel="stylesheet" href=" 'css/bootstrap.css'" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">   
 <h2 style="font-size: 34px;margin-left: 10cm;color: lightblue;"> Please Choose Your Facorite Currency </h2>
     <div class="container">
