--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -9,7 +9,7 @@
     </div>
     <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto px-10">
         <div class="text-md lg:flex-grow">
-            <a href="" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
+            <a href="{% url 'home' %}" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
                 Home
             </a>
             <a href="{% url 'aboutus' %} " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
