working on transfer

--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -30,7 +30,7 @@
                     Withdraw
                 </a>
                 
-                <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
+                <a href="{% url 'transfer' %} " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
                     Transfer
                 </a>
                 <a href=" {% url 'exchange' %}  " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
