--- a/templates/transactions/transaction_report.html
+++ b/templates/transactions/transaction_report.html
@@ -32,7 +32,7 @@
         </thead>
         <tbody>
             {% for transaction in object_list %}
-            <tr class="{% cycle 'bg-gray-300' 'bg-white-100' %}">
+            <tr class="{% cycle 'bg-gray-600' 'bg-gray-500' %}">
                 <td class="border border-blue-900 px-4 py-2">{{ transaction.timestamp|date:"F d, Y h:i A" }}</td>
                 <td class="border border-blue-900 px-4 py-2">{{ transaction.get_transaction_type_display }}</td>
                 <td class="border border-blue-900 px-4 py-2 text-right">$ {{ transaction.amount|floatformat:2|intcomma }}</td>
