--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -26,14 +26,14 @@
                 <a href="{% url 'transactions:deposit_money' %}" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white mr-4">
                     Deposit
                 </a>
-                <a href="{% url 'transactions:withdraw_money' %}" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
+                <a href="{% url 'transactions:withdraw_money' %}" class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white hover:text-white mr-4">
                     Withdraw
                 </a>
                 
-                <a href="{% url 'transfer' %} " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
+                <a href="{% url 'transfer' %} " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white hover:text-white mr-4">
                     Transfer
                 </a>
-                <a href=" {% url 'exchange' %}  " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white">
+                <a href=" {% url 'exchange' %}  " class="block mt-4 lg:inline-block lg:mt-0 text-white hover:text-white hover:text-white mr-4">
                     Exchange
                 </a>
                 
