--- a/templates/exchange/exchange.html
+++ b/templates/exchange/exchange.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %} {% load static %} {% block head_title %}Banking System{% endblock %} {% block content %}
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">   
-<div class="my-10 py-3 px-4 bg-dark rounded-xl shadow-md">
+<div class="my-10 py-3 px-4 bg-black rounded-xl shadow-md">
   <h1 class="font-mono font-bold text-3xl text-center pb-5 pt-2">Please Choose Your Favorite Currency</h1>
   <div class="container">
     <div class="page-header" id="banner">
