underline hover is removed

--- a/templates/core/navbar.html
+++ b/templates/core/navbar.html
@@ -69,6 +69,10 @@
   position: relative;
   display: inline-block;
 }
+.dropdown a:hover{
+    text-decoration: none;
+
+}
 
 .dropdown-content {
   display: none;
