--- a/templates/core/about_us.html
+++ b/templates/core/about_us.html
@@ -7,14 +7,19 @@
 <div class="grid grid-cols-3 gap-4">
     <div></div>
     <div class="py-2 px-3 rounded-xl bg-white mt-12">
-        <h1 class="font-mono font-bold text-3xl text-center pb-5 shadow-md">Please login to your account </h1>
+        <h1 class="font-mono font-bold text-3xl text-center pb-5 shadow-md">About Us  </h1>
         <hr>
         <h3>Banking System Managment</h3>
         <p>
             Developed as Final project by:<br>
-            Huzaifa <br>
-            Royesh<br>
-            Sakina Yousufi     <br>
+            <br>
+            <ul>
+            <li>Name: Huzaifa &nbsp;&nbsp; &nbsp; Student ID:  21202260</li> 
+            <li>Name: Royesh &nbsp;&nbsp; &nbsp; Student ID: 2120226032</li> 
+            <li>Name: Sakina Yousufi &nbsp;&nbsp; &nbsp;  Student ID: 2120226033</li> <br>
+            <br>
+                 
+        </ul>
         </p>
     </div>
 </div>
