add new content

--- a/templates/core/about_us.html
+++ b/templates/core/about_us.html
@@ -14,7 +14,7 @@
             Developed as Final project by:<br>
             <br>
             <ul>
-            <li>Name: Huzaifa &nbsp;&nbsp; &nbsp; Student ID:  21202260</li> 
+            <li>Name: Huzaifa Merhj &nbsp;&nbsp; &nbsp; Student ID:  2120226092</li> 
             <li>Name: Royesh &nbsp;&nbsp; &nbsp; Student ID: 2120226032</li> 
             <li>Name: Sakina Yousufi &nbsp;&nbsp; &nbsp;  Student ID: 2120226033</li> <br>
             <br>
