--- a/templates/core/about_us.html
+++ b/templates/core/about_us.html
@@ -9,7 +9,8 @@
     <div class="py-2 px-3 rounded-xl bg-white mt-12">
         <h1 class="font-mono font-bold text-3xl text-center pb-5 shadow-md">About Us  </h1>
         <hr>
-        <h3>Banking System Managment</h3>
+        <h3 style="text-align: center;">Banking System Managment</h3>
+        <br>
         <p>
             Developed as Final project by:<br>
             <br>
