--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %} {% load static %} {% block head_title %}Banking System{% endblock %} {% block content %}
+{% extends 'core/base.html' %} {% load static %} {% block head_title %}Bank Management System{% endblock %} {% block content %}
 <div class="container mx-auto flex flex-col md:flex-row items-center my-12 md:my-24">
 
     <div class="w-full lg:w-1/2 lg:py-6 text-center">
