--- a/templates/core/about_us.html
+++ b/templates/core/about_us.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %} {% load static %} {% block head_title %}Banking System{% endblock %} {% block content %} {% if form.non_field_errors %} {% for error in form.non_field_errors %}
+{% extends 'core/base.html' %} {% load static %} {% block head_title %}About Us{% endblock %} {% block content %} {% if form.non_field_errors %} {% for error in form.non_field_errors %}
 <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mt-2" role="alert">
     <p class="font-bold">Error!</p>
     <p class="block sm:inline">{{ error }}</p>
@@ -15,9 +15,9 @@
             Developed as Final project by:<br>
             <br>
             <ul>
-            <li>Name: Huzaifa Merhj &nbsp;&nbsp; &nbsp; Student ID:  2120226092</li> 
-            <li>Name: Royesh &nbsp;&nbsp; &nbsp; Student ID: 2120226032</li> 
-            <li>Name: Sakina Yousufi &nbsp;&nbsp; &nbsp;  Student ID: 2120226033</li> <br>
+            <li>Name: Huzaifa Merhj &nbsp;&nbsp; &nbsp;  Student ID:  2120226093</li> 
+            <li>Name: Royesh Hussin &nbsp;&nbsp; &nbsp; Student ID: 2120226032</li> 
+            <li>Name: Sakina Yousufi &nbsp;&nbsp; &nbsp; Student ID: 2120226033</li> <br>
             <br>
                  
         </ul>
