--- a/templates/core/footer.html
+++ b/templates/core/footer.html
@@ -4,7 +4,7 @@
             <div class="sm:w-2/3 text-center py-0 pb-2">
                 <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                     © 2023 Copyright:
-                    <a class="text-white" href="#">Banking-system-management.com</a>
+                    <a class="text-white" href="#">Bank-Management-System</a>
                   </div>
             </div>
         </div>
